fixed contrast error index.htlm

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -202,7 +202,7 @@ footer {
 }
 
 footer h3 {
-    color: #ea4600;
+    color: #702302;
 }
 
 .footer-header2 {
